tests/fail/expr/await2.rs
fn main() {
    let fut = async { true };
    one_assert::assert!(fut.await);
}
